Add Sustancia Service, DAO, and implemented functionality in Views: frmAltaSustancias

--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -11,4 +11,10 @@
     <ProjectReference Include="..\Persistencia\Persistencia.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="MySql.Data">
+      <HintPath>..\..\..\..\..\Program Files (x86)\MySQL\MySQL Connector NET 9.4\MySql.Data.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
